--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo2workflow",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://demoworkflow.github.io/demo2workflow",
+  "homepage": "https://Jaif0urteen.github.io/demo2workflow",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
